--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.2",
+    "@material-ui/styles": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
@@ -38,6 +39,7 @@
     ]
   },
   "devDependencies": {
+    "istanbul-lib-coverage": "^3.0.0",
     "react-socket-io": "^0.2.5"
   }
 }
