--- a/client/package.json
+++ b/client/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "istanbul-lib-coverage": "^3.0.0",
-    "react-socket-io": "^0.2.0"
+    "react-socket-io": "^0.2.0",
+    "socket.io-client": "^1.7.4"
   }
 }
